Corrected logo on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 
 .header img {
     padding: 23px;
+    max-width: 80%;
 }
 
 .content-background {
